add h2 with class title and text shadow

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   </head>
   <body>
     <h1>Making the Web Beautiful!</h1>
+    <h2 class="title">Fusce posuere ligula elementum purus</h2>
   </body>
 </html>
